--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,14 @@ body{
     font-family: "Onest", sans-serif;
     color: rgb(181, 63, 255);
     cursor: url('cursor\ small.png'), auto;
+    margin: 0px;
 }
 
 header{
     background-color: rgb(0, 0, 0);
     text-align: center;
     justify-content: center;
-    padding: 3%;
+    padding: 1%;
     font-size: xx-large;
     text-shadow: 4px 2px 10px rgb(255, 0, 0);
     font-family: "Archivo Black", sans-serif;
@@ -25,19 +26,30 @@ header{
 nav{
     background-color: rgb(0, 0, 0);
     margin: 0;
-    padding: 10px;
+    padding: 1px;
     display: flex; 
     justify-content: center; 
     align-items: center;
 }
 main{
     background-color: black;
-    padding: 2%;
+    padding: 0%;
+    margin: 0px;
+}
+#aboutmain{
+    background-color: black;
+    padding: 0%;
+    margin: 0px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #homepage{
     background-color: black;
     display: grid;
     text-align: center;
+    align-items: center;
 }
 button{
     background-color:  rgb(181, 63, 255);
@@ -52,7 +64,7 @@ button{
     cursor: url('cursor\ small.png'), pointer;
 }
 #home{
-    margin:10px;
+    margin: 10px;
 }
 #about{
     margin:10px;
@@ -68,6 +80,7 @@ button{
     height: auto;
     margin: 0;
     padding: 10%;
+    align-items: center;
 }
 #picture{
     max-width: 100%;
@@ -81,9 +94,10 @@ footer{
     color: azure;
 }
 p{
-    padding: 10%;
-    text-align: left;
+    padding: 5%;
     font-size: large;
+    justify-content: center;
+    text-align: center;
 }
 button:hover{
     background-color:  rgb(255, 0, 0);
@@ -108,29 +122,56 @@ button:active{
     box-shadow: 0px 0px 9px rgb(255, 0, 0);
     text-transform: uppercase;
     cursor: url('cursor\ small.png'), pointer;
-
-
-.form-row {
-    margin-bottom: 10px;
 }
 
-.form-input {
-    display: block;
-}
-
-.form-error {
-    color: red;
-}
-
-#contact-form{
+input[type=text], select, textarea {
+    font-family: 'Onest', sans-serif;
+    width: 100%;
+    padding: 12px; 
+    border-radius: 10px; 
+    box-sizing: border-box; 
+    margin-top: 12px; 
+    margin-bottom: 16px;
+    resize: vertical;
+    color:rgb(194, 96, 255);
+    background-color: rgb(255, 255, 255);
+  }
+  
+  input[type=submit] {
+    background-color: rgb(194, 96, 255);
+    color: azure;
+    padding: 12px 20px;
+    border-radius: 10px;
+    font-family: 'Onest', sans-serif;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 8px #c2c2c2;
+    box-shadow: 0px 0px 9px rgb(181, 63, 255);
+  }
+  
+  input[type=submit]:hover {
+    background-color: rgb(255, 0, 0);
+    text-shadow: 2px 2px 8px #c2c2c2;
+    box-shadow: 0px 0px 9px rgb(255, 0, 0);
+    cursor: url('cursor\ small.png'), pointer;
+  }
+  
+  .container {
+    border-radius: 5px;
+    background-color: #000000;
     padding-left: 10%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    background-color: black;
-}
-input{
-    border-radius: 10px 10px 10px 10px;
-}
-textarea{
-    border-radius: 10px 10px 10px 10px;
+    padding-right: 10%;
+  }
+
+  @media screen and (max-width: 735px){
+    #aboutmain{
+        background-color: black;
+        padding: 0%;
+        margin: 0px;
+        display: grid;
+        text-align: center;
+        align-items: center;
+    }
+    #aboutpic{
+      padding: 10%;
+    }
 }
